cmake_minimum_required(VERSION 3.21)
project(untitled7)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled7 main.cpp "Basic OOP Class/Student Class/Student.cpp" "Basic OOP Class/Student Class/Student.h" "Opertor Overloading/Complex.cpp" "Opertor Overloading/Complex.h" Inheritance/Base.cpp Inheritance/Base.h Inheritance/Derivative.cpp Inheritance/Derivative.h)
